92_-_Extensions/Packages_C_Header/Xrandr.pas


function XRRGetCrtcInfo(dpy: PDisplay; resources: PXRRScreenResources; crtc: TRRCrtc): PXRRCrtcInfo; cdecl; external;
procedure XRRFreeCrtcInfo(crtcInfo: PXRRCrtcInfo); cdecl; external;
function XRRSetCrtcConfig(dpy: PDisplay; resources: PXRRScreenResources; crtc: TRRCrtc; timestamp: TTime; x: cint;
  y: cint; mode: TRRMode; rotation: TRotation; outputs: PRROutput; noutputs: cint): TStatus; cdecl; external;
function XRRGetCrtcGammaSize(dpy: PDisplay; crtc: TRRCrtc): cint; cdecl; external;

type
  PXRRCrtcGamma = ^TXRRCrtcGamma;

  TXRRCrtcGamma = record
    size: cint;
    red: pcushort;
    green: pcushort;
    blue: pcushort;
  end;

function XRRGetCrtcGamma(dpy: PDisplay; crtc: TRRCrtc): PXRRCrtcGamma; cdecl; external;
function XRRAllocGamma(size: cint): PXRRCrtcGamma; cdecl; external;
procedure XRRSetCrtcGamma(dpy: PDisplay; crtc: TRRCrtc; gamma: PXRRCrtcGamma); cdecl; external;
procedure XRRFreeGamma(gamma: PXRRCrtcGamma); cdecl; external;
{ Version 1.3 additions  }
function XRRGetScreenResourcesCurrent(dpy: PDisplay; window: TWindow): PXRRScreenResources; cdecl; external;
procedure XRRSetCrtcTransform(dpy: PDisplay; crtc: TRRCrtc; transform: PXTransform; filter: PChar; params: PXFixed;
  nparams: cint); cdecl; external;

type
  PPXRRCrtcTransformAttributes = ^PXRRCrtcTransformAttributes;
  PXRRCrtcTransformAttributes = ^TXRRCrtcTransformAttributes;

  TXRRCrtcTransformAttributes = record
    pendingTransform: TXTransform;
    pendingFilter: PChar;
    pendingNparams: cint;
    pendingParams: PXFixed;
    currentTransform: TXTransform;
    currentFilter: PChar;
    currentNparams: cint;
    currentParams: PXFixed;
  end;

{
 * Get current crtc transforms and filters.
 * Pass *attributes to XFree to free
  }

function XRRGetCrtcTransform(dpy: PDisplay; crtc: TRRCrtc; attributes: PPXRRCrtcTransformAttributes): TStatus; cdecl; external;
{
 * intended to take RRScreenChangeNotify,  or
 * ConfigureNotify (on the root window)
 * returns 1 if it is an event type it understands, 0 if not
  }
function XRRUpdateConfiguration(event: PXEvent): cint; cdecl; external;

type
  PXRRPanning = ^TXRRPanning;

  TXRRPanning = record
    timestamp: TTime;
    left: cuint;
    top: cuint;
    Width: cuint;
    Height: cuint;
    track_left: cuint;
    track_top: cuint;
    track_width: cuint;
    track_height: cuint;
    border_left: cint;
    border_top: cint;
    border_right: cint;
    border_bottom: cint;
  end;

function XRRGetPanning(dpy: PDisplay; resources: PXRRScreenResources; crtc: TRRCrtc): PXRRPanning; cdecl; external;
procedure XRRFreePanning(panning: PXRRPanning); cdecl; external;
function XRRSetPanning(dpy: PDisplay; resources: PXRRScreenResources; crtc: TRRCrtc; panning: PXRRPanning): TStatus; cdecl; external;
procedure XRRSetOutputPrimary(dpy: PDisplay; window: TWindow; output: TRROutput); cdecl; external;
function XRRGetOutputPrimary(dpy: PDisplay; window: TWindow): TRROutput; cdecl; external;

type
  PXRRProviderResources = ^TXRRProviderResources;

  TXRRProviderResources = record
    timestamp: TTime;
    nproviders: cint;
    providers: PRRProvider;
  end;

function XRRGetProviderResources(dpy: PDisplay; window: TWindow): PXRRProviderResources; cdecl; external;
procedure XRRFreeProviderResources(resources: PXRRProviderResources); cdecl; external;

type
  PXRRProviderInfo = ^TXRRProviderInfo;

  TXRRProviderInfo = record
    capabilities: cuint;
    ncrtcs: cint;
    crtcs: PRRCrtc;
    noutputs: cint;
    outputs: PRROutput;
    Name: PChar;
    nassociatedproviders: cint;
    associated_providers: PRRProvider;
    associated_capability: pcuint;
    nameLen: cint;
  end;

function XRRGetProviderInfo(dpy: PDisplay; resources: PXRRScreenResources; provider: TRRProvider): PXRRProviderInfo; cdecl; external;
procedure XRRFreeProviderInfo(provider: PXRRProviderInfo); cdecl; external;
function XRRSetProviderOutputSource(dpy: PDisplay; provider: TXID; source_provider: TXID): cint; cdecl; external;
function XRRSetProviderOffloadSink(dpy: PDisplay; provider: TXID; sink_provider: TXID): cint; cdecl; external;
function XRRListProviderProperties(dpy: PDisplay; provider: TRRProvider; nprop: Pcint): PAtom; cdecl; external;
function XRRQueryProviderProperty(dpy: PDisplay; provider: TRRProvider; _property: TAtom): PXRRPropertyInfo; cdecl; external;
procedure XRRConfigureProviderProperty(dpy: PDisplay; provider: TRRProvider; _property: TAtom; pending: TBool; range: TBool;
  num_values: cint; values: Pcint); cdecl; external;
procedure XRRChangeProviderProperty(dpy: PDisplay; provider: TRRProvider; _property: TAtom; _type: TAtom; format: cint;
  mode: cint; Data: pbyte; nelements: cint); cdecl; external;
procedure XRRDeleteProviderProperty(dpy: PDisplay; provider: TRRProvider; _property: TAtom); cdecl; external;
function XRRGetProviderProperty(dpy: PDisplay; provider: TRRProvider; _property: TAtom; offset: clong; length: clong;
  _delete: TBool; pending: TBool; req_type: TAtom; actual_type: PAtom; actual_format: Pcint;
  nitems: pculong; bytes_after: pculong; prop: PPbyte): cint; cdecl; external;

type
  PXRRMonitorInfo = ^TXRRMonitorInfo;

  TXRRMonitorInfo = record
    Name: TAtom;
    primary: TBool;
    automatic: TBool;
    noutput: cint;
    x: cint;
    y: cint;
    Width: cint;
    Height: cint;
    mwidth: cint;
    mheight: cint;
    outputs: PRROutput;
  end;

function XRRAllocateMonitor(dpy: PDisplay; noutput: cint): PXRRMonitorInfo; cdecl; external;
function XRRGetMonitors(dpy: PDisplay; window: TWindow; get_active: TBool; nmonitors: Pcint): PXRRMonitorInfo; cdecl; external;
procedure XRRSetMonitor(dpy: PDisplay; window: TWindow; monitor: PXRRMonitorInfo); cdecl; external;
procedure XRRDeleteMonitor(dpy: PDisplay; window: TWindow; Name: TAtom); cdecl; external;
procedure XRRFreeMonitors(monitors: PXRRMonitorInfo); cdecl; external;

implementation

end.
